resolved header button spacing issue and payemnt portal issue

--- a/frontsteps/inc/custom.css
+++ b/frontsteps/inc/custom.css
@@ -714,6 +714,9 @@ ul#footer-links li:first-child:after
 }
 
 }
+#header .container .right-column ul li.login a {
+    margin-right: 10px;
+}
 /*#header .container .logo-column {
     margin: 0px;
 }
